--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,3 +7,11 @@
     @apply bg-slate-200;
   }
 }
+
+.input {
+  @apply px-4 py-2 rounded-lg text-base sm:text-lg md:text-xl text-slate-700 placeholder-slate-500 bg-slate-200 border border-slate-400;
+}
+
+.error {
+  @apply font-normal text-sm sm:text-base md:text-lg text-red-600;
+}
